--- a/register.html
+++ b/register.html
@@ -7,15 +7,15 @@
     <script src="https://kit.fontawesome.com/b97a1105aa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./dest/output.css">
 </head>
-<body class="bg-[#000038] text-white pt-24 mx-0 px-0 opacity-0 overflow-x-hidden">
-    <header class="fixed top-0 left-0 w-full bg-[#000038D0] pt-4 px-4 flex justify-between items-center shadow-lg z-50">
+<body class="bg-[#000038] text-white m-0 p-0 md:pt-24 opacity-0 overflow-x-hidden">
+    <header class="fixed top-0 left-0 w-full bg-[#000038D0] pl-2 pb-2 pt-4 md:px-4 flex justify-between items-center shadow-lg z-50">
         <div class="flex items-center gap-2">
             <a href="index.html" class="logo mt-0 mr-4 flex items-center">
                 <img src="./src/logo.jpg" alt="Campus Connect logo" class="w-12 h-12 rounded-full border-2 border-[#5ac2fc]">
             </a>
             <h1 class=" text-base md:text-lg font-semibold text-[#fbcaef]">Campus Connect</h1>
         </div>
-        <button id="hamburger" aria-label="Toggle menu" class="block md:hidden text-[#5ac2fc] bg-[#000038] border-none text-2xl focus:outline-none transition-transform duration-300 transform hover:scale-110">
+        <button id="hamburger" aria-label="Toggle menu" class="block md:hidden text-[#5ac2fc] bg-transparent border-none ml-auto text-2xl focus:outline-none transition-transform duration-300 transform hover:scale-110 absolute top-4 right-4">
             <i class="fa-solid fa-bars text-2xl cursor-pointer text-[#5ac2fc] md:hidden"></i>
         </button>
         <nav id="menu" class="hidden md:flex flex-col gap-2 md:flex-row md:gap-4 md:space-y-0 space-y-2 bg-[#000038D0] md:bg-transparent rounded-lg shadow-lg p-4 absolute right-8 top-16 md:top-0 z-40 transition-all duration-500 ease-in-out tranform md:transform-none">
