--- a/public/calendar.html
+++ b/public/calendar.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <script src="https://kit.fontawesome.com/b97a1105aa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./dest/output.css">
+    <link rel="stylesheet" href="../styles/output.css">
 </head>
 <body class="bg-[#000038] text-white m-0 p-0 md:pt-24 opacity-0 overflow-x-hidden">
     <header class="fixed top-0 left-0 w-full bg-[#000038D0] pl-2 pb-2 pt-4 md:px-4 flex justify-between items-center shadow-lg z-50">
         <div class="flex items-center gap-2">
             <a href="index.html" class="logo mt-0 mr-4 flex items-center">
-                <img src="./src/logo.jpg" alt="Campus Connect logo" class="w-12 h-12 rounded-full border-2 border-[#5ac2fc]">
+                <img src="../assets/logo.jpg" alt="Campus Connect logo" class="w-12 h-12 rounded-full border-2 border-[#5ac2fc]">
             </a>
             <h1 class=" text-base md:text-lg font-semibold text-[#fbcaef]">Campus Connect</h1>
         </div>
@@ -106,7 +106,7 @@
             <p class="text-sm text-gray-400 mt-4">&copy; 2025 Campus Connect. All rights reserved.</p>
         </div>
     </footer>
-    <script src="calendar.js"></script>
+    <script src="../scripts/calendar.js"></script>
     <script>
         const hamburger = document.getElementById('hamburger')
         const menu = document.getElementById('menu')
