deploy error fixed

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Connect</title>
     <script defer src="https://kit.fontawesome.com/b97a1105aa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../styles/output.css">
+    <link rel="stylesheet" href="./styles/output.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
 </head>
 <body class="bg-[#000038] text-white m-0 p-0 md:pt-24 opacity-0 overflow-x-hidden">
     <header class="fixed top-0 left-0 w-full bg-[#000038D0] pl-2 pb-2 pt-4 md:px-4 flex justify-between items-center shadow-lg z-50">
         <div class="flex items-center gap-2">
             <a href="index.html" class="logo mt-0 mr-4 flex items-center">
-                <img src="../assets/logo.jpg" alt="Campus Connect logo" class="w-12 h-12 rounded-full border-2 border-[#5ac2fc]">
+                <img src="./assets/logo.jpg" alt="Campus Connect logo" class="w-12 h-12 rounded-full border-2 border-[#5ac2fc]">
             </a>
             <h1 class=" text-base md:text-lg font-semibold text-[#fbcaef]">Campus Connect</h1>
         </div>
@@ -21,35 +21,35 @@
         </button>
         <nav id="menu" class="hidden md:flex flex-col gap-2 md:flex-row md:gap-4 md:space-y-0 space-y-2 bg-[#000038D0] md:bg-transparent rounded-lg shadow-lg p-4 absolute right-8 top-16 md:top-0 z-40 transition-all duration-500 ease-in-out tranform md:transform-none">
             <a href="index.html" class="block text-[#fbcaef] px-2 py-1 md:py-4 hover:text-[#5ac2fc] no-underline transition">Home</a>
-            <a href="calendar.html" class="block text-[#fbcaef] px-2 py-1 md:py-4 hover:text-[#5ac2fc] no-underline transition">Event Calendar</a>
+            <a href="public/calendar.html" class="block text-[#fbcaef] px-2 py-1 md:py-4 hover:text-[#5ac2fc] no-underline transition">Event Calendar</a>
             <a href="#contact" class="block text-[#fbcaef] px-2 py-1 md:py-4 hover:text-[#5ac2fc] no-underline transition">Contact</a>
         </nav>
     </header>
     <main class="w-screen">
         <!-- <div class="mx-auto px-0"> -->
-            <section class="relative bg-cover bg-center w-screen min-h-screen flex flex-col justify-center items-center text-center overflow-hidden" style="background-image: url('../assets/hero.jpg');">
+            <section class="relative bg-cover bg-center w-screen min-h-screen flex flex-col justify-center items-center text-center overflow-hidden" style="background-image: url('./assets/hero.jpg');">
                 <div class="hero absolute inset-0 bg-black bg-opacity-50"></div>
                 <div class="relative z-10 max-w-3xl px-4">
                     <h1 class="text-6xl mb-4 font-bold text-[#fbcaef]">CAMPUS CONNECT</h1>
                     <p class="text-[#fbcaef] text-lg max-w-xl relative z-10 mt-4 mx-auto">Discover exciting workshops, seminars, and social gatherings on campus. Join us and explore the events!</p>
-                    <a href="calendar.html" class="btn mb-4 mt-6 px-6 py-2 bg-[#5ac2fc] text-[#000038] rounded-lg shadow-md hover:bg-[#000038] hover:text-[#5ac2fc] transition no-underline">Explore Now!</a>
+                    <a href="public/calendar.html" class="btn mb-4 mt-6 px-6 py-2 bg-[#5ac2fc] text-[#000038] rounded-lg shadow-md hover:bg-[#000038] hover:text-[#5ac2fc] transition no-underline">Explore Now!</a>
                 </div>
             </section>
             <section class="flex flex-wrap justify-center gap-6 mt-12 px-4">
                 <div class="card bg-[#fbcaef] text-[#000038] p-6 rounded-lg shadow-lg max-w-sm text-center transform hover:-translate-y-2 transition">
                     <h3 class="text-xl font-semibold">Workshops</h3>
                     <p class="mt-2">Enhance your skills by attending hands-on workshops.</p>
-                    <a href="calendar.html" class="mb-4 inline-block bg-[#5ac2fc] text-[#000038] px-4 py-2 rounded-lg hover:bg-[#000038] hover:text-[#5ac2fc] no-underline transition">Register</a>
+                    <a href="public/calendar.html" class="mb-4 inline-block bg-[#5ac2fc] text-[#000038] px-4 py-2 rounded-lg hover:bg-[#000038] hover:text-[#5ac2fc] no-underline transition">Register</a>
                 </div>
                 <div class="card bg-[#fbcaef] text-[#000038] p-6 rounded-lg shadow-lg max-w-sm text-center transform hover:-translate-y-2 transition">
                     <h3 class="text-xl font-semibold">Seminars</h3>
                     <p class="mt-2">Learn from industry experts at our seminar.</p>
-                    <a href="calendar.html" class="mb-4 inline-block bg-[#5ac2fc] text-[#000038] px-4 py-2 rounded-lg hover:bg-[#000038] hover:text-[#5ac2fc] no-underline transition">Register</a>
+                    <a href="public/calendar.html" class="mb-4 inline-block bg-[#5ac2fc] text-[#000038] px-4 py-2 rounded-lg hover:bg-[#000038] hover:text-[#5ac2fc] no-underline transition">Register</a>
                 </div>
                 <div class="card bg-[#fbcaef] text-[#000038] p-6 rounded-lg shadow-lg max-w-sm text-center transform hover:-translate-y-2 transition">
                     <h3 class="text-xl font-semibold">Social gatherings</h3>
                     <p class="mt-2">Network and have fun at social events.</p>
-                    <a href="calendar.html" class="mb-4 inline-block bg-[#5ac2fc] text-[#000038] px-4 py-2 rounded-lg hover:bg-[#000038] hover:text-[#5ac2fc] no-underline transition">Register</a>
+                    <a href="public/calendar.html" class="mb-4 inline-block bg-[#5ac2fc] text-[#000038] px-4 py-2 rounded-lg hover:bg-[#000038] hover:text-[#5ac2fc] no-underline transition">Register</a>
                 </div>
             </section>
         </div>
